Fix logo image filename case sensitivity in index.html
Signed-off-by: Jose Luis Madrid Londoño <86725617+joseluismadrid@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <img src="img/logo.png" alt="Logo de la empresa" class="logo">
+    <img src="img/Logo.png" alt="Logo de la empresa" class="logo">
     <h1>EcoWord Soap</h1>
     <p>Productora y distribuidora de jabones</p>
   </header>
@@ -90,5 +90,6 @@
     <p>© 2025 Nombre de la Empresa | Jabones Naturales | Todos los derechos reservados</p>
   </footer>
 </body>
+
 
 </html>
