Add section for localización factors and corresponding image in index.html
Signed-off-by: Jose Luis Madrid Londoño <86725617+joseluismadrid@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li><a href="#organigrama">Organigrama</a></li>
       <li><a href="#producto">Producto</a></li>
       <li><a href="#economia">Economía Circular</a></li>
+      <li><a href="#factor_economico">Factores de  Localización</a></li>
       <li><a href="#estetica">Estética</a></li>
     </ul>
   </nav>
@@ -73,6 +74,14 @@
         ambiental.</p>
       <div class="imagenes-economia">
         <img src="img/economia.png" alt="Economia">
+      </div>
+    </section>
+
+    <section id="factor_economico" class="card">
+      <h2>Factores de  Localización</h2>
+      <p>Los factores de localización determinan el éxito o fracaso de una operación: desde la cercanía a las materias primas y la disponibilidad de mano de obra calificada, hasta el acceso a vías de transporte, servicios públicos y mercados. Un buen análisis de estos aspectos permite reducir costos, mejorar la logística y aprovechar oportunidades del entorno. En pocas palabras, localizar bien una empresa es asegurar su crecimiento sostenible y su conexión eficiente con clientes, proveedores y recursos.</p>
+      <div class="imagenes-economia">
+        <img src="img/localizacion.png" alt="Economia">
       </div>
     </section>
 
