--- a/index.html
+++ b/index.html
@@ -19,20 +19,41 @@
     <button class="menu-toggle" aria-controls="site-nav" aria-expanded="false" aria-label="Abrir menú">☰</button>
   </header>
 
-  <nav id="site-nav">
-    <ul>
-      <li><a href="#mision">Misión</a></li>
-      <li><a href="#vision">Visión</a></li>
-      <li><a href="#valores">Valores</a></li>
-      <li><a href="#organigrama">Organigrama</a></li>
-      <li><a href="#producto">Producto</a></li>
-      <li><a href="#economia">Economía Circular</a></li>
-      <li><a href="#factor_economico">Factores de  Localización</a></li>
-      <li><a href="#estetica">Estética</a></li>
-    </ul>
+  <nav id="site-nav" aria-label="Menú principal">
+    <div class="container nav-inner">
+      <div class="nav-left">
+        <ul class="menu-left">
+          <li><a href="#mision">Misión</a></li>
+          <li><a href="#vision">Visión</a></li>
+          <li><a href="#valores">Valores</a></li>
+          <li><a href="#producto">Producto</a></li>
+          <li><a href="#economia">Economía Circular</a></li>
+        </ul>
+      </div>
+
+      <div class="nav-right">
+        <ul class="menu-right">
+          <li><a href="#organigrama">Organigrama</a></li>
+          <li><a href="#pregunta">Pregunta de investigación</a></li>
+
+          <!-- Objetivos como submenu accesible -->
+          <li class="has-submenu">
+            <button class="submenu-toggle" aria-expanded="false" aria-controls="submenu-objetivos">Objetivos ▾</button>
+            <ul id="submenu-objetivos" class="submenu" aria-hidden="true">
+              <li><a href="#ObjetivoGeneral">Objetivo General</a></li>
+              <li><a href="#ObjetivosEspecificos">Objetivos Especificos</a></li>
+            </ul>
+          </li>
+
+          <li><a href="#factor_economico">Factores de Localización</a></li>
+          <li><a href="#estetica">Estética</a></li>
+        </ul>
+      </div>
+    </div>
   </nav>
 
   <main>
+
     <section id="mision" class="card">
       <h2>Misión</h2>
       <p>Crear jabones naturales que cuiden tu piel y el planeta, utilizando ingredientes sostenibles y procesos
@@ -43,15 +64,42 @@
       <h2>Visión</h2>
       <p>Ser una marca líder en productos ecológicos que inspire hábitos de consumo responsables y conscientes.</p>
     </section>
+    <section id="Pregunta" class="card">
+      <h2>Pregunta de investigación</h2>
+      <p>¿De qué manera el jabón Rey contribuye a la limpieza del hogar y al cuidado del medio ambiente?.</p>
+    </section>
+
+    <section id="ObjetivoGeneral" class="card">
+      <h2>Objetivo General</h2>
+      <p>Analizar las propiedades, usos y beneficios del jabón Rey en la limpieza y el cuidado ambiental.</p>
+    </section>
+    <section id="ObjetivosEspecificos" class="card">
+      <h2>Objetivos Especificos</h2>
+      <ol>
+        <li> Identificar los ingredientes principales del jabón Rey.</li> <br>
+        <li> Describir los usos más comunes del jabón Rey en el hogar.</li> <br>
+        <li> Evaluar los beneficios ecológicos del jabón Rey frente a otros jabones industriales.</li>
+      </ol>
+    </section>
+    <section id="Actividades" class="card">
+      <h2>Actividades</h2>
+      <ol>
+        <li>Investigar la historia y origen del jabón Rey.</li> <br>
+        <li>Leer la etiqueta del producto para conocer sus componentes.</li> <br>
+        <li>Observar su efecto al lavar ropa o utensilios.</li><br>
+        <li>Comparar su rendimiento con otros jabones.</li><br>
+        <li>Elaborar una conclusión sobre su importancia en el hogar y el medio ambiente.</li><br>
+      </ol>
+    </section>
 
     <section id="valores" class="card">
       <h2>Valores</h2>
-      <ul>
-        <li>Sostenibilidad</li>
-        <li>Calidad artesanal</li>
-        <li>Transparencia</li>
+      <ol>  
+        <li>Sostenibilidad</li> <br>
+        <li>Calidad artesanal</li> <br>
+        <li>Transparencia</li> <br> 
         <li>Respeto por la naturaleza</li>
-      </ul>
+      </ol>
     </section>
 
     <section id="organigrama" class="card">
@@ -78,8 +126,12 @@
     </section>
 
     <section id="factor_economico" class="card">
-      <h2>Factores de  Localización</h2>
-      <p>Los factores de localización determinan el éxito o fracaso de una operación: desde la cercanía a las materias primas y la disponibilidad de mano de obra calificada, hasta el acceso a vías de transporte, servicios públicos y mercados. Un buen análisis de estos aspectos permite reducir costos, mejorar la logística y aprovechar oportunidades del entorno. En pocas palabras, localizar bien una empresa es asegurar su crecimiento sostenible y su conexión eficiente con clientes, proveedores y recursos.</p>
+      <h2>Factores de Localización</h2>
+      <p>Los factores de localización determinan el éxito o fracaso de una operación: desde la cercanía a las materias
+        primas y la disponibilidad de mano de obra calificada, hasta el acceso a vías de transporte, servicios públicos
+        y mercados. Un buen análisis de estos aspectos permite reducir costos, mejorar la logística y aprovechar
+        oportunidades del entorno. En pocas palabras, localizar bien una empresa es asegurar su crecimiento sostenible y
+        su conexión eficiente con clientes, proveedores y recursos.</p>
       <div class="imagenes-economia">
         <img src="img/localizacion.png" alt="Economia">
       </div>
@@ -95,6 +147,7 @@
         <div class="color" style="background-color: #3A5A40;">Tierra</div>
       </div>
     </section>
+
   </main>
 
   <footer>
@@ -103,13 +156,13 @@
 
   <script>
     // Toggle menú hamburguesa: mantener pequeño y accesible
-    (function() {
+    (function () {
       const btn = document.querySelector('.menu-toggle');
       const nav = document.getElementById('site-nav');
 
       if (!btn || !nav) return;
 
-      btn.addEventListener('click', function() {
+      btn.addEventListener('click', function () {
         const isOpen = nav.classList.toggle('open');
         btn.setAttribute('aria-expanded', String(isOpen));
         // Cambiar label para lectores de pantalla
@@ -117,11 +170,56 @@
       });
 
       // Cerrar nav si se cambia el tamaño a mayor a 800px
-      window.addEventListener('resize', function() {
+      window.addEventListener('resize', function () {
         if (window.innerWidth > 800 && nav.classList.contains('open')) {
           nav.classList.remove('open');
           btn.setAttribute('aria-expanded', 'false');
           btn.setAttribute('aria-label', 'Abrir menú');
+        }
+      });
+
+      // Submenus: toggle y accesibilidad
+      const submenuToggles = document.querySelectorAll('.submenu-toggle');
+      for (const toggle of submenuToggles) {
+        const parent = toggle.closest('.has-submenu');
+        const submenuId = toggle.getAttribute('aria-controls');
+        const submenu = submenuId ? document.getElementById(submenuId) : null;
+
+        toggle.addEventListener('click', function (e) {
+          e.preventDefault();
+          const isOpen = parent.classList.toggle('open');
+          toggle.setAttribute('aria-expanded', String(isOpen));
+          if (submenu) submenu.setAttribute('aria-hidden', String(!isOpen));
+        });
+      }
+
+      // Cerrar submenus al hacer click fuera
+      document.addEventListener('click', function (e) {
+        for (const toggle of submenuToggles) {
+          const parent = toggle.closest('.has-submenu');
+          if (!parent) continue;
+          if (!parent.contains(e.target)) {
+            parent.classList.remove('open');
+            toggle.setAttribute('aria-expanded', 'false');
+            const submenuId = toggle.getAttribute('aria-controls');
+            const submenu = submenuId ? document.getElementById(submenuId) : null;
+            if (submenu) submenu.setAttribute('aria-hidden', 'true');
+          }
+        }
+      });
+
+      // Cerrar submenus con Escape
+      document.addEventListener('keydown', function (e) {
+        if (e.key === 'Escape') {
+          for (const toggle of submenuToggles) {
+            const parent = toggle.closest('.has-submenu');
+            if (!parent) continue;
+            parent.classList.remove('open');
+            toggle.setAttribute('aria-expanded', 'false');
+            const submenuId = toggle.getAttribute('aria-controls');
+            const submenu = submenuId ? document.getElementById(submenuId) : null;
+            if (submenu) submenu.setAttribute('aria-hidden', 'true');
+          }
         }
       });
     })();
